[package]
name = "stackoverfall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.12", features = ["wav"] }
bevy_rapier2d = { version = "0.23", features = ["debug-render-2d", "enhanced-determinism"]}
bevy_framepace = "0.14.1"
num = { version = "0.4.1", features = [] }
bevy_egui = "0.23.0"

rand = "0.8"